--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "build": "npm run clear && npm run build:client && npm run build:server",
     "clear": "rimraf dist",
     "dev:client": "webpack-dev-server --config build/webpack.config.dev.js",
+    "dev:server": "cross-env NODE_ENV=development node server/app.js",
+    "prod": "cross-env NODE_ENV=production node server/app.js",
     "build:client": "webpack --mode production --config build/webpack.config.client.js",
-    "build:server": "webpack --mode production --config build/webpack.config.server.js",
-    "start": "node server/app.js"
+    "build:server": "webpack --mode production --config build/webpack.config.server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -25,7 +27,10 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.18.0",
+    "memory-fs": "^0.4.1",
     "rimraf": "^2.6.2",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
