add eslint and editorconfig

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev:server": "cross-env NODE_ENV=development node server/app.js",
     "prod": "cross-env NODE_ENV=production node server/app.js",
     "build:client": "webpack --mode production --config build/webpack.config.client.js",
-    "build:server": "webpack --mode production --config build/webpack.config.server.js"
+    "build:server": "webpack --mode production --config build/webpack.config.server.js",
+    "lint": "eslint --ext .js --ext .jsx client/",
+    "precommit": "npm run lint"
   },
   "author": "",
   "license": "ISC",
@@ -24,12 +26,25 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.2.0",
+    "eslint": "^5.1.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^4.0.5",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-standard": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
+    "husky": "^0.14.3",
     "memory-fs": "^0.4.1",
     "rimraf": "^2.6.2",
     "webpack": "^4.15.1",
