优化webpack配置，优化favicon，使用nodemon

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -11,7 +11,7 @@
   },
   "extends": "airbnb",
   "rules": {
-    "semi": [0],
+    // "semi": [0],
     "react/jsx-filename-extension": [0]
   }
 }
