--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.3",
+    "react-router-dom": "^4.3.1",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
