router and store for ssr

--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "prop-types": "^15.6.2",
+    "query-string": "^6.1.0",
     "react": "^16.4.1",
+    "react-async-bootstrapper": "^2.1.0",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.3",
     "react-router-dom": "^4.3.1",
