--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "ejs-compiled-loader": "^1.1.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mobx": "^5.0.3",
@@ -31,6 +33,7 @@
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.3",
     "react-router-dom": "^4.3.1",
+    "serialize-javascript": "^1.5.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
