--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "build:client": "webpack --mode production --config build/webpack.config.client.js",
     "build:server": "webpack --mode production --config build/webpack.config.server.js",
     "lint": "eslint --ext .js --ext .jsx client/",
-    "precommit": "npm run lint"
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "client/**/*.js": ["eslint --fix", "git add"]
   },
   "author": "",
   "license": "ISC",
@@ -59,6 +62,7 @@
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
     "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
     "memory-fs": "^0.4.1",
     "nodemon": "^1.18.2",
     "rimraf": "^2.6.2",
