--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "client/**/*.js": ["eslint --fix", "git add"]
+    "client/**/*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -34,6 +37,7 @@
     "react": "^16.4.1",
     "react-async-bootstrapper": "^2.1.0",
     "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.3",
     "react-router-dom": "^4.3.1",
     "serialize-javascript": "^1.5.0",
