--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run clear && npm run build:client && npm run build:server",
     "clear": "rimraf dist",
-    "dev:client": "webpack-dev-server --colors --profile --display-modules --config build/webpack.config.dev.js",
+    "dev:client": "webpack-dev-server --colors --profile --display-modules --mode development --config build/webpack.config.client.js",
     "dev:server": "nodemon server/app.js",
-    "prod": "cross-env NODE_ENV=production node server/app.js",
+    "start": "cross-env NODE_ENV=production node server/app.js",
     "build:client": "webpack --mode production --config build/webpack.config.client.js",
     "build:server": "webpack --mode production --config build/webpack.config.server.js",
     "lint": "eslint --ext .js --ext .jsx client/",
