--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "react-server-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "a react server render app",
+  "main": "server/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run clear && npm run build:client && npm run build:server",
-    "clear": "rimraf dist",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --colors --profile --display-modules --mode development --config config/webpack.config.client.js",
     "dev:server": "nodemon server/app.js",
-    "start": "cross-env NODE_ENV=production node server/app.js",
     "build:client": "webpack --mode production --config config/webpack.config.client.js",
     "build:server": "webpack --mode production --config config/webpack.config.server.js",
+    "start": "cross-env NODE_ENV=production node server/app.js",
+    "build": "npm run clear && npm run build:client && npm run build:server",
+    "clear": "rimraf dist",
     "lint": "eslint --ext .js --ext .jsx client/",
     "fix": "eslint --fix client/",
     "precommit": "lint-staged"
@@ -22,61 +21,61 @@
       "git add"
     ]
   },
-  "author": "",
+  "author": "YanYuanFE",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "ejs-compiled-loader": "^1.1.0",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "mobx": "^5.0.3",
-    "mobx-react": "^5.2.3",
-    "prop-types": "^15.6.2",
-    "query-string": "^6.1.0",
-    "react": "^16.4.1",
-    "react-async-bootstrapper": "^2.1.0",
-    "react-dom": "^16.4.1",
-    "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.3.3",
-    "react-router-dom": "^4.3.1",
-    "serialize-javascript": "^1.5.0",
+    "express": "^4.16.4",
+    "express-session": "^1.16.1",
+    "mobx": "^5.9.4",
+    "mobx-react": "^5.4.3",
+    "prop-types": "^15.7.2",
+    "query-string": "^6.5.0",
+    "react": "^16.8.6",
+    "react-async-bootstrapper": "^2.1.1",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-hot-loader": "^4.8.4",
+    "react-router-dom": "^5.0.0",
+    "serialize-javascript": "^1.7.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-decorators": "^7.1.2",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.1.2",
+    "@babel/runtime": "^7.4.4",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "cross-env": "^5.2.0",
-    "eslint": "^5.7.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-html": "^4.0.6",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-html": "^5.0.3",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "http-proxy-middleware": "^0.18.0",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.0",
+    "http-proxy-middleware": "^0.19.1",
+    "husky": "^2.2.0",
+    "lint-staged": "^8.1.6",
     "memory-fs": "^0.4.1",
-    "nodemon": "^1.18.2",
-    "rimraf": "^2.6.2",
-    "webpack": "^4.22.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4"
+    "nodemon": "^1.19.0",
+    "rimraf": "^2.6.3",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-merge": "^4.2.1"
   }
 }
