chore: add debug

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react": "^16.8.6",
     "react-async-bootstrapper": "^2.1.1",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
+    "react-helmet": "^6.0.0-beta",
+    "react-helmet-async": "^1.0.2",
     "react-hot-loader": "^4.8.8",
     "react-router-dom": "^5.0.0",
     "serialize-javascript": "^1.7.0",
@@ -51,6 +52,7 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.4.5",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
