--- a/.eslintrc
+++ b/.eslintrc
@@ -3,8 +3,7 @@
   "parserOptions": {
     "ecmaVersion": 2018,
     "ecmaFeatures": {
-      "legacyDecorators": true,
-      "experimentalObjectRestSpread": true
+      "legacyDecorators": true
     }
   },
   "rules": {
