chore: update deps

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -11,6 +11,7 @@
   },
   "extends": "airbnb",
   "rules": {
-    "react/jsx-filename-extension": [0]
+    "react/jsx-filename-extension": [0],
+    "react/prop-types": "off",
   }
 }
