--- a/package.json
+++ b/package.json
@@ -24,60 +24,60 @@
   "author": "YanYuanFE",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "ejs": "^2.6.1",
+    "ejs": "^3.1.3",
     "ejs-compiled-loader": "^1.1.0",
-    "express": "^4.17.0",
-    "express-session": "^1.16.1",
-    "mobx": "^5.9.4",
-    "mobx-react": "^5.4.4",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "prop-types": "^15.7.2",
-    "query-string": "^6.5.0",
-    "react": "^16.8.6",
+    "query-string": "^6.12.1",
+    "react": "^16.13.1",
     "react-async-bootstrapper": "^2.1.1",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^6.0.0-beta",
-    "react-helmet-async": "^1.0.2",
-    "react-hot-loader": "^4.8.8",
-    "react-router-dom": "^5.0.0",
-    "serialize-javascript": "^1.7.0",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
+    "react-helmet-async": "^1.0.6",
+    "react-hot-loader": "^4.12.21",
+    "react-router-dom": "^5.2.0",
+    "serialize-javascript": "^3.0.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.4.4",
-    "@babel/runtime": "^7.4.5",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.6",
-    "cross-env": "^5.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-html": "^5.0.5",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "http-proxy-middleware": "^0.19.1",
-    "husky": "^2.3.0",
-    "lint-staged": "^8.1.7",
-    "memory-fs": "^0.4.1",
-    "nodemon": "^1.19.0",
-    "rimraf": "^2.6.3",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1",
-    "webpack-merge": "^4.2.1"
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/register": "^7.9.0",
+    "@babel/runtime": "^7.9.6",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.0.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-html": "^6.0.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "html-webpack-plugin": "^4.3.0",
+    "http-proxy-middleware": "^1.0.4",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.6",
+    "memory-fs": "^0.5.0",
+    "nodemon": "^2.0.4",
+    "rimraf": "^3.0.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
   }
 }
