--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -13,5 +13,7 @@
   "rules": {
     "react/jsx-filename-extension": [0],
     "react/prop-types": "off",
+    "react/jsx-props-no-spreading": "off",
+    "import/prefer-default-export": "off"
   }
 }
