--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a react server render app",
   "main": "server/app.js",
   "scripts": {
-    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --colors --profile --display-modules --mode development --config config/webpack.config.client.js",
+    "dev:client": "cross-env NODE_ENV=development webpack serve --profile --mode development --config config/webpack.config.client.js",
     "dev:server": "nodemon server/app.js",
     "build:client": "webpack --mode production --config config/webpack.config.client.js",
     "build:server": "webpack --mode production --config config/webpack.config.server.js",
@@ -24,61 +24,60 @@
   "author": "YanYuanFE",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.19.2",
-    "@hot-loader/react-dom": "^16.8.6",
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
-    "ejs": "^3.1.3",
-    "ejs-compiled-loader": "^1.1.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.2.2",
+    "mobx": "^6.0.4",
+    "mobx-react": "^7.0.5",
     "prop-types": "^15.7.2",
-    "query-string": "^6.12.1",
-    "react": "^16.13.1",
-    "react-async-bootstrapper": "^2.1.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
-    "react-helmet-async": "^1.0.6",
-    "react-hot-loader": "^4.12.21",
+    "query-string": "^6.13.7",
+    "react": "^17.0.1",
+    "react-async": "^10.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.0.7",
     "react-router-dom": "^5.2.0",
-    "serialize-javascript": "^3.0.0",
+    "serialize-javascript": "^5.0.1",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/register": "^7.9.0",
-    "@babel/runtime": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/register": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-standard": "^14.1.1",
+    "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "ejs-compiled-loader": "^3.0.0",
+    "ejs-loader": "^0.5.0",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-standard": "^16.0.2",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-html": "^6.0.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "html-webpack-plugin": "^4.3.0",
-    "http-proxy-middleware": "^1.0.4",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.6",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-standard": "^4.1.0",
+    "html-webpack-plugin": "^5.0.0-alpha.15",
+    "http-proxy-middleware": "^1.0.6",
+    "husky": "^4.3.5",
+    "lint-staged": "^10.5.3",
     "memory-fs": "^0.5.0",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "rimraf": "^3.0.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^5.4.1"
   }
 }
